--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <a href="https://zapotecas.github.io/" target="_blank" style="margin-right: 20px; text-decoration: none; color: #2E4057; font-weight: 600;">Los Zapotecas</a>
     <a href="URL_DEL_SEGUNDO_LINK" target="_blank" style="text-decoration: none; color: #2E4057; font-weight: 600;">Mixtecos</a>
 </div>
-
-</div>
-
   <meta charset="utf-8">
   <title>SALA DE OAXACA</title>
   <style> 
@@ -174,3 +171,5 @@ A finales del reinado de Ahuízotl, entre 1495 y 1497, se desarrolló la batalla
 <a href="https://zapotecas.github.io/" rel="noopener noreferrer">Cultura Zapoteca</a>
 <br>
 <a href="file:///C:/Users/Computacion/Downloads/MEXICAS%20(2).html">Cultura Mexica</a>
+</body>
+</html>
