--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <div style="position: absolute; top: 15px; right: 15px; z-index: 1000; background-color: #ffffffcc; padding: 10px 15px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.2); font-family: 'Open Sans', sans-serif;">
     <a href="https://zapotecas.github.io/" target="_blank" style="margin-right: 20px; text-decoration: none; color: #2E4057; font-weight: 600;">Los Zapotecas</a>
-    <a href="https://culturamixteca.github.io/" target="_blank" style="text-decoration: none; color: #2E4057; font-weight: 600;">Mixtecos</a>
+    <a href="https://culturamexica.github.io/" target="_blank" style="text-decoration: none; color: #2E4057; font-weight: 600;">mexicas</a>
 </div>
   <meta charset="utf-8">
   <title>SALA DE OAXACA</title>
